Update uglify-js package and created latest bundle.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
         <base href="/"/>
     </head>
     <body>
-        <script>
+        <!-- <script>
             System.import('app').then(function(){
                 console.log("Application bootstrapped")
             }).catch(function(err){
                 console.log("Error occured ", err)
             })
-        </script>
+        </script> -->
+        <script src="./app/bundle.min.js"></script>
         <my-app></my-app>
     </body>
 </html>
